--- a/AstronomyObjC/AstronomyObjC/Storyboards/Base.lproj/Main.storyboard
+++ b/AstronomyObjC/AstronomyObjC/Storyboards/Base.lproj/Main.storyboard
@@ -84,21 +84,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Y5Z-93-hbh">
-                            <size key="itemSize" width="128" height="128"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Y5Z-93-hbh">
+                            <size key="itemSize" width="150" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="CQ5-hm-RrD">
-                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="CQ5-hm-RrD" customClass="SolCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="JnU-9o-ziN">
-                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vmc-wP-oYZ">
+                                            <rect key="frame" x="8" y="8" width="134" height="134"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="vmc-wP-oYZ" secondAttribute="bottom" constant="8" id="7fN-pK-6la"/>
+                                        <constraint firstItem="vmc-wP-oYZ" firstAttribute="leading" secondItem="JnU-9o-ziN" secondAttribute="leading" constant="8" id="FJB-dG-3Hb"/>
+                                        <constraint firstItem="vmc-wP-oYZ" firstAttribute="top" secondItem="JnU-9o-ziN" secondAttribute="top" constant="8" id="ptP-hW-mYF"/>
+                                        <constraint firstAttribute="trailing" secondItem="vmc-wP-oYZ" secondAttribute="trailing" constant="8" id="wfC-VQ-ESu"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
+                                    <outlet property="soiImageView" destination="vmc-wP-oYZ" id="fyB-fa-GcC"/>
                                     <segue destination="BYZ-38-t0r" kind="show" id="auY-dj-HJa"/>
                                 </connections>
                             </collectionViewCell>
@@ -115,7 +127,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cqD-F6-Pl0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1481.1594202898552" y="157.36607142857142"/>
+            <point key="canvasLocation" x="1388" y="144"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Y08-be-kAi">
