--- a/Astronomy-ObSwiftive-c/Astronomy-ObSwiftive-c/Base.lproj/Main.storyboard
+++ b/Astronomy-ObSwiftive-c/Astronomy-ObSwiftive-c/Base.lproj/Main.storyboard
@@ -1,24 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wbn-VQ-sAo">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Rover Photo Detail View Controller-->
+        <scene sceneID="eJS-lI-aZY">
+            <objects>
+                <viewController id="wbn-VQ-sAo" customClass="RoverPhotoDetailViewController" customModule="Astronomy_ObSwiftive_c" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="923-41-psL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hfk-EA-iMh">
+                                <rect key="frame" x="0.0" y="44" width="414" height="592"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="yed-hY-St6" firstAttribute="bottom" secondItem="hfk-EA-iMh" secondAttribute="bottom" constant="226" id="8GD-QU-laG"/>
+                            <constraint firstItem="hfk-EA-iMh" firstAttribute="top" secondItem="yed-hY-St6" secondAttribute="top" id="VW8-mb-B41"/>
+                            <constraint firstItem="yed-hY-St6" firstAttribute="trailing" secondItem="hfk-EA-iMh" secondAttribute="trailing" id="cpp-qA-cau"/>
+                            <constraint firstItem="hfk-EA-iMh" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" id="vtx-ln-JE4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="yed-hY-St6"/>
+                    </view>
+                    <connections>
+                        <outlet property="roverPhotoImage" destination="hfk-EA-iMh" id="U8X-MV-1bY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="62O-a5-7Ny" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-72" y="115"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Astronomy_ObSwiftive_c" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="759" y="115"/>
         </scene>
     </scenes>
 </document>
