--- a/Astronomy-ObSwiftive-c/Astronomy-ObSwiftive-c/Base.lproj/Main.storyboard
+++ b/Astronomy-ObSwiftive-c/Astronomy-ObSwiftive-c/Base.lproj/Main.storyboard
@@ -18,18 +18,73 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hfk-EA-iMh">
                                 <rect key="frame" x="0.0" y="44" width="414" height="592"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HJO-91-8KJ">
+                                <rect key="frame" x="10" y="644" width="394" height="33.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="left" distribution="fillProportionally" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Hj0-ES-0yI">
+                                <rect key="frame" x="8" y="687.5" width="398" height="18"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1BI-E2-ov3">
+                                        <rect key="frame" x="0.0" y="0.0" width="175.5" height="18"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfa-as-9Eo">
+                                        <rect key="frame" x="185.5" y="0.0" width="212.5" height="18"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z66-WQ-pyO">
+                                <rect key="frame" x="8" y="730.5" width="396" height="26.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4a-0m-JS6">
+                                <rect key="frame" x="8" y="767" width="175" height="26.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="175" id="zxP-oo-Npp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="HJO-91-8KJ" firstAttribute="top" secondItem="hfk-EA-iMh" secondAttribute="bottom" constant="8" id="0B9-Ae-Feg"/>
+                            <constraint firstItem="HJO-91-8KJ" firstAttribute="centerX" secondItem="923-41-psL" secondAttribute="centerX" id="20F-lU-Qzn"/>
+                            <constraint firstItem="HJO-91-8KJ" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" constant="10" id="4X1-ui-kPW"/>
                             <constraint firstItem="yed-hY-St6" firstAttribute="bottom" secondItem="hfk-EA-iMh" secondAttribute="bottom" constant="226" id="8GD-QU-laG"/>
+                            <constraint firstItem="V4a-0m-JS6" firstAttribute="top" secondItem="Z66-WQ-pyO" secondAttribute="bottom" constant="10" id="BAV-DW-4Lc"/>
+                            <constraint firstItem="Hj0-ES-0yI" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" constant="8" id="E3s-bH-8zX"/>
+                            <constraint firstItem="yed-hY-St6" firstAttribute="trailing" secondItem="Hj0-ES-0yI" secondAttribute="trailing" constant="8" id="P5G-pe-WnR"/>
+                            <constraint firstItem="Z66-WQ-pyO" firstAttribute="top" secondItem="Hj0-ES-0yI" secondAttribute="bottom" constant="25" id="UbV-C0-2a1"/>
                             <constraint firstItem="hfk-EA-iMh" firstAttribute="top" secondItem="yed-hY-St6" secondAttribute="top" id="VW8-mb-B41"/>
                             <constraint firstItem="yed-hY-St6" firstAttribute="trailing" secondItem="hfk-EA-iMh" secondAttribute="trailing" id="cpp-qA-cau"/>
+                            <constraint firstItem="Z66-WQ-pyO" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" constant="8" id="eye-fe-gNb"/>
+                            <constraint firstItem="V4a-0m-JS6" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" constant="8" id="k6i-6N-8j2"/>
+                            <constraint firstItem="Hj0-ES-0yI" firstAttribute="top" secondItem="HJO-91-8KJ" secondAttribute="bottom" constant="10" id="qHM-Ma-wyF"/>
                             <constraint firstItem="hfk-EA-iMh" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" id="vtx-ln-JE4"/>
+                            <constraint firstItem="yed-hY-St6" firstAttribute="trailing" secondItem="Z66-WQ-pyO" secondAttribute="trailing" constant="10" id="w99-tM-Vjg"/>
+                            <constraint firstItem="yed-hY-St6" firstAttribute="trailing" secondItem="HJO-91-8KJ" secondAttribute="trailing" constant="10" id="wI8-on-pcx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yed-hY-St6"/>
                     </view>
                     <connections>
+                        <outlet property="cameraNameTextLabel" destination="Z66-WQ-pyO" id="fpZ-ju-neM"/>
+                        <outlet property="earthDateTextLabel" destination="Qfa-as-9Eo" id="bm2-Yg-5Vj"/>
+                        <outlet property="photoIDTextLabel" destination="V4a-0m-JS6" id="G4C-c1-bCT"/>
+                        <outlet property="roverNameTextLabel" destination="HJO-91-8KJ" id="kdW-dK-5rw"/>
                         <outlet property="roverPhotoImage" destination="hfk-EA-iMh" id="U8X-MV-1bY"/>
+                        <outlet property="solTextLabel" destination="1BI-E2-ov3" id="6It-JX-Wxy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="62O-a5-7Ny" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
