--- a/Astronomy-ObSwiftive-c/Astronomy-ObSwiftive-c/Base.lproj/Main.storyboard
+++ b/Astronomy-ObSwiftive-c/Astronomy-ObSwiftive-c/Base.lproj/Main.storyboard
@@ -47,6 +47,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ws3-Dv-jn3">
+                                <rect key="frame" x="133.5" y="808.5" width="147" height="30"/>
+                                <state key="normal" title="Save Photo to Library"/>
+                                <connections>
+                                    <action selector="savePhotoToLibrary:" destination="wbn-VQ-sAo" eventType="touchUpInside" id="zzr-an-7VE"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4a-0m-JS6">
                                 <rect key="frame" x="8" y="767" width="175" height="26.5"/>
                                 <constraints>
@@ -63,11 +70,13 @@
                             <constraint firstItem="HJO-91-8KJ" firstAttribute="centerX" secondItem="923-41-psL" secondAttribute="centerX" id="20F-lU-Qzn"/>
                             <constraint firstItem="HJO-91-8KJ" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" constant="10" id="4X1-ui-kPW"/>
                             <constraint firstItem="yed-hY-St6" firstAttribute="bottom" secondItem="hfk-EA-iMh" secondAttribute="bottom" constant="226" id="8GD-QU-laG"/>
+                            <constraint firstItem="ws3-Dv-jn3" firstAttribute="centerX" secondItem="923-41-psL" secondAttribute="centerX" id="8Xj-wJ-3Xg"/>
                             <constraint firstItem="V4a-0m-JS6" firstAttribute="top" secondItem="Z66-WQ-pyO" secondAttribute="bottom" constant="10" id="BAV-DW-4Lc"/>
                             <constraint firstItem="Hj0-ES-0yI" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" constant="8" id="E3s-bH-8zX"/>
                             <constraint firstItem="yed-hY-St6" firstAttribute="trailing" secondItem="Hj0-ES-0yI" secondAttribute="trailing" constant="8" id="P5G-pe-WnR"/>
                             <constraint firstItem="Z66-WQ-pyO" firstAttribute="top" secondItem="Hj0-ES-0yI" secondAttribute="bottom" constant="25" id="UbV-C0-2a1"/>
                             <constraint firstItem="hfk-EA-iMh" firstAttribute="top" secondItem="yed-hY-St6" secondAttribute="top" id="VW8-mb-B41"/>
+                            <constraint firstItem="ws3-Dv-jn3" firstAttribute="top" secondItem="V4a-0m-JS6" secondAttribute="bottom" constant="15" id="ckT-iy-m5t"/>
                             <constraint firstItem="yed-hY-St6" firstAttribute="trailing" secondItem="hfk-EA-iMh" secondAttribute="trailing" id="cpp-qA-cau"/>
                             <constraint firstItem="Z66-WQ-pyO" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" constant="8" id="eye-fe-gNb"/>
                             <constraint firstItem="V4a-0m-JS6" firstAttribute="leading" secondItem="yed-hY-St6" secondAttribute="leading" constant="8" id="k6i-6N-8j2"/>
